[gd_scene load_steps=19 format=2]

[ext_resource path="res://theme/jottery_theme_light.tres" type="Theme" id=1]
[ext_resource path="res://options/options_selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://jot/jot.tscn" type="PackedScene" id=3]
[ext_resource path="res://jottery.gd" type="Script" id=4]
[ext_resource path="res://rename_jot_dialog.gd" type="Script" id=5]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.8, 0.8, 0.8, 1 )
grow_begin = 0.0
grow_end = 0.0

[sub_resource type="InputEventAction" id=2]
action = "new_jot"
pressed = true

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "close_jot"
pressed = true

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "rename_jot"
pressed = true

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "zoom_in"
pressed = true

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "zoom_out"
pressed = true

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "save_jottery"
pressed = true

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[node name="jottery" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
zoom_power = 2
jot_template = ExtResource( 3 )
jot_tabs = NodePath("v_box_container/tabs_bg/jot_tabs")
options_dialog = NodePath("options_dialog")
options_selector = NodePath("options_dialog/options_selector")
rename_jot_dialog = NodePath("rename_jot_dialog")

[node name="v_box_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tabs_bg" type="PanelContainer" parent="v_box_container"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="jot_tabs" type="TabContainer" parent="v_box_container/tabs_bg"]
margin_right = 1024.0
margin_bottom = 576.0
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Startup Jot" parent="v_box_container/tabs_bg/jot_tabs" groups=[
"jots",
] instance=ExtResource( 3 )]
margin_top = 29.0
text = "Welcome to Jottery!"

[node name="panel" type="Panel" parent="v_box_container"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 577.0
rect_min_size = Vector2( 0, 1 )
custom_styles/panel = SubResource( 1 )

[node name="toolbar" type="HBoxContainer" parent="v_box_container"]
margin_top = 577.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_jot" type="Button" parent="v_box_container/toolbar"]
margin_right = 71.0
margin_bottom = 23.0
hint_tooltip = "Ctrl + T"
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "New Jot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_jot" type="Button" parent="v_box_container/toolbar"]
margin_left = 71.0
margin_right = 148.0
margin_bottom = 23.0
hint_tooltip = "Ctrl + W"
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "Close Jot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rename_jot" type="Button" parent="v_box_container/toolbar"]
margin_left = 148.0
margin_right = 245.0
margin_bottom = 23.0
hint_tooltip = "F2	"
shortcut_in_tooltip = false
shortcut = SubResource( 7 )
text = "Rename jot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="white_filler" type="Panel" parent="v_box_container/toolbar"]
margin_left = 245.0
margin_right = 741.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="zoom_in" type="Button" parent="v_box_container/toolbar"]
margin_left = 741.0
margin_right = 816.0
margin_bottom = 23.0
hint_tooltip = "Ctrl + Equal"
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
text = "Zoom In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom_out" type="Button" parent="v_box_container/toolbar"]
margin_left = 816.0
margin_right = 903.0
margin_bottom = 23.0
hint_tooltip = "Ctrl + Minus"
shortcut_in_tooltip = false
shortcut = SubResource( 11 )
text = "Zoom Out"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="v_box_container/toolbar"]
margin_left = 903.0
margin_right = 953.0
margin_bottom = 23.0
hint_tooltip = "Ctrl + S"
shortcut_in_tooltip = false
shortcut = SubResource( 13 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="v_box_container/toolbar"]
margin_left = 953.0
margin_right = 1024.0
margin_bottom = 23.0
shortcut_in_tooltip = false
text = "Options"

[node name="options_dialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 100 )
window_title = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_selector" parent="options_dialog" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -39.0

[node name="rename_jot_dialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 100 )
window_title = "Rename jot"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="rename_jot_dialog"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="rename_jot_dialog/v_box_container"]
margin_right = 184.0
margin_bottom = 19.0
text = "New name:"

[node name="new_name" type="LineEdit" parent="rename_jot_dialog/v_box_container"]
margin_top = 23.0
margin_right = 184.0
margin_bottom = 52.0

[connection signal="pressed" from="v_box_container/toolbar/new_jot" to="." method="new_jot"]
[connection signal="pressed" from="v_box_container/toolbar/close_jot" to="." method="close_current_jot"]
[connection signal="pressed" from="v_box_container/toolbar/rename_jot" to="." method="prompt_rename_current_jot"]
[connection signal="pressed" from="v_box_container/toolbar/zoom_in" to="." method="zoom_in"]
[connection signal="pressed" from="v_box_container/toolbar/zoom_out" to="." method="zoom_out"]
[connection signal="pressed" from="v_box_container/toolbar/save" to="." method="save"]
[connection signal="pressed" from="v_box_container/toolbar/options" to="." method="open_options"]
[connection signal="confirmed" from="options_dialog" to="." method="confirm_options_selector"]
[connection signal="about_to_show" from="rename_jot_dialog" to="rename_jot_dialog" method="_on_about_to_show"]
[connection signal="confirmed" from="rename_jot_dialog" to="." method="confirm_rename_jot"]
[connection signal="text_entered" from="rename_jot_dialog/v_box_container/new_name" to="rename_jot_dialog" method="_on_new_name_text_entered"]
